fix: Keep figcaption visible during editing

--- a/source/common/modules/markdown-editor/editor.less
+++ b/source/common/modules/markdown-editor/editor.less
@@ -203,7 +203,7 @@
         display: inherit;
       }
 
-      &:hover {
+      &:hover, &:focus-within {
         figcaption, span.image-size-info, span.open-externally-button {
           opacity: 1;
         }
